--- a/files/vae_record.ipynb
+++ b/files/vae_record.ipynb
@@ -2824,6 +2824,300 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%% s69\n",
+    "from utils import *\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "torch.set_printoptions(linewidth=160)\n",
+    "from datetime import datetime\n",
+    "print('starting date time ', datetime.now())\n",
+    "\n",
+    "\"make the result reproducible\"\n",
+    "seed = 1\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)       # current GPU seed\n",
+    "torch.cuda.manual_seed_all(seed)   # all GPUs seed\n",
+    "torch.backends.cudnn.deterministic = True  #True uses deterministic alg. for cuda\n",
+    "torch.backends.cudnn.benchmark = False  #False cuda use the fixed alg. for conv, may slower\n",
+    "\n",
+    "rid = 's69' \n",
+    "fig_loc = '../data/data_ss/figures/'\n",
+    "mod_loc = '../data/data_ss/models/'\n",
+    "if not(os.path.isdir(fig_loc + f'/{rid}/')): \n",
+    "    print('made a new folder')\n",
+    "    os.mkdir(fig_loc + f'{rid}/')\n",
+    "    os.mkdir(mod_loc + f'{rid}/')\n",
+    "fig_loc = fig_loc + f'{rid}/'\n",
+    "mod_loc = mod_loc + f'{rid}/'\n",
+    "# torch.autograd.set_detect_anomaly(True)\n",
+    "\n",
+    "#%% define models and functions\n",
+    "from vae_modules import *\n",
+    "def lower2matrix(rx12):\n",
+    "    ind = torch.tril_indices(3,3)\n",
+    "    indx = np.diag_indices(3)\n",
+    "    rx_inv_hat = torch.zeros(rx12.shape[0], 3, 3, dtype=torch.cfloat).cuda()\n",
+    "    rx_inv_hat[:, ind[0], ind[1]] = rx12[:, :6] + 1j*rx12[:,6:]\n",
+    "    rx_inv_hat = rx_inv_hat + rx_inv_hat.permute(0,2,1).conj()\n",
+    "    rx_inv_hat[:, indx[0], indx[1]] = rx_inv_hat[:, indx[0], indx[1]]/2\n",
+    "    return rx_inv_hat\n",
+    "\n",
+    "class NNet_s10(nn.Module):\n",
+    "    \"\"\"This is recursive Wiener filter version, with Rb threshold of [1e-3, 1e2]\n",
+    "    Input shape [I,M,N,F], e.g.[32,3,100,100]\n",
+    "    J <=K\n",
+    "    \"\"\"\n",
+    "    def __init__(self, M, K, im_size):\n",
+    "        super().__init__()\n",
+    "        self.dz = 32\n",
+    "        self.J, self.M = K, M\n",
+    "        down_size = int(im_size/4)\n",
+    "        self.mainnet = nn.Sequential(\n",
+    "            FC_layer_g(12, 128),\n",
+    "            FC_layer_g(128, 128),\n",
+    "        )\n",
+    "        self.hnet = nn.Sequential(\n",
+    "            FC_layer_g(128, 128),\n",
+    "            FC_layer_g(128, 128),\n",
+    "            FC_layer_g(128, 64),\n",
+    "            nn.Linear(64, 1),\n",
+    "            nn.Tanh()\n",
+    "        )\n",
+    "        self.rxnet = nn.Sequential(\n",
+    "            FC_layer_g(128, 128),\n",
+    "            FC_layer_g(128, 128),\n",
+    "            FC_layer_g(128, 64),\n",
+    "            FC_layer_g(64, 32),\n",
+    "            nn.Linear(32, 12)\n",
+    "        )\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            Down_g(in_channels=1, out_channels=64),\n",
+    "            DoubleConv_g(in_channels=64, out_channels=32),\n",
+    "            Down_g(in_channels=32, out_channels=16),\n",
+    "            DoubleConv_g(in_channels=16, out_channels=1),\n",
+    "            )\n",
+    "        self.fc1 = nn.Linear(down_size*down_size, 2*self.dz)\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(self.dz, down_size*down_size),\n",
+    "            Reshape(-1, 1, down_size, down_size),\n",
+    "            Up_g(in_channels=1, out_channels=64),\n",
+    "            DoubleConv_g(in_channels=64, out_channels=32),\n",
+    "            Up_g(in_channels=32, out_channels=16),\n",
+    "            DoubleConv_g(in_channels=16, out_channels=8),\n",
+    "            nn.Conv2d(8, 8, kernel_size=3, padding=(1,2)),\n",
+    "            nn.GroupNorm(num_groups=max(8//4,1), num_channels=8),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "            OutConv(in_channels=8, out_channels=1),\n",
+    "            ) \n",
+    "        self.bilinear = nn.Linear(self.dz, self.dz, bias=False)\n",
+    "\n",
+    "    def reparameterize(self, mu, logvar):\n",
+    "        std = torch.exp(0.5*logvar)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return mu + eps*std\n",
+    "\n",
+    "    def forward(self, x):     \n",
+    "        btsize, M, N, F = x.shape\n",
+    "        z_all, v_all, h_all = [], [], []\n",
+    "        ch = np.pi*torch.arange(self.M, device=x.device)\n",
+    "        xj = x.permute(0,2,3,1)[...,None]  # shape of [I,N,F,M,1]\n",
+    "        for i in range(self.J):\n",
+    "            \"Get H estimation\"\n",
+    "            ind = torch.tril_indices(3,3)\n",
+    "            rx = (xj@xj.transpose(-1,-2).conj()).mean(dim=(1,2))\n",
+    "            rx_lower = rx[:, ind[0], ind[1]]\n",
+    "            mid =self.mainnet(torch.stack((rx_lower.real,rx_lower.imag),\\\n",
+    "                 dim=1).reshape(btsize,-1))\n",
+    "            ang = self.hnet(mid)\n",
+    "            temp = ang@ch[None,:]\n",
+    "            hhat = (1j*temp).exp()  # shape of [I, M]\n",
+    "            h_all.append(hhat)\n",
+    "\n",
+    "            \"Get Rx inverse\"\n",
+    "            rx_index = self.rxnet(mid)\n",
+    "            rx_inv = lower2matrix(rx_index) # shape of [I, M, M]\n",
+    "        \n",
+    "            \"Encoder part\"\n",
+    "            w = rx_inv@hhat[...,None] / \\\n",
+    "                (hhat[:,None,:].conj()@rx_inv@hhat[...,None])\n",
+    "            shat = w.permute(0,2,1).conj()[:,None,None]@xj\n",
+    "            xx = self.encoder(shat.squeeze()[:,None].abs())\n",
+    "\n",
+    "            \"Get latent variable\"\n",
+    "            zz = self.fc1(xx.reshape(btsize,-1))\n",
+    "            mu = zz[:,::2]\n",
+    "            logvar = zz[:,1::2]\n",
+    "            z = self.reparameterize(mu, logvar)\n",
+    "            wz = self.bilinear(z)\n",
+    "            z_all.append(z)\n",
+    "            z_all.append(wz)\n",
+    "            \n",
+    "            \"Decoder to get V\"\n",
+    "            v = self.decoder(z).square().squeeze()  # shape of [I,N,F]\n",
+    "            v_all.append(threshold(v, floor=1e-6, ceiling=1e2)) # 1e-6 to 1e2\n",
+    "\n",
+    "            \"Remove the current component\"\n",
+    "            rxinvh = rx_inv@hhat[...,None]  # shape of [I, M, 1]\n",
+    "            v_rxinv_h_herm = (v[...,None, None]*rxinvh[:,None, None]).transpose(-1,-2).conj() \n",
+    "            cj = hhat[:,None,None,:,None] * (v_rxinv_h_herm @ xj) # shape of [I,N,F,M,1]\n",
+    "            xj = xj - cj\n",
+    "       \n",
+    "        Hhat = torch.stack(h_all, 2) # shape:[I, M, J]\n",
+    "        vhat = torch.stack(v_all, 3).to(torch.cfloat) # shape:[I, N, F, J]\n",
+    "        zall = torch.stack(z_all, dim=1)\n",
+    "\n",
+    "        # Rb = (b@b.conj().permute(0,1,2,4,3)).mean(dim=(1,2)).squeeze()\n",
+    "        eye = torch.eye(M, device='cuda')\n",
+    "        Rb = torch.stack(tuple(eye for ii in range(btsize)), 0)*1e-3\n",
+    "\n",
+    "        return vhat.diag_embed(), Hhat, Rb, mu, logvar, zall\n",
+    "\n",
+    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1):\n",
+    "    I, M, J = x.shape[0], x.shape[1], Rs.shape[-1]\n",
+    "    x = x.permute(0,2,3,1)\n",
+    "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    Rxperm = Hhat @ Rs.permute(1,2,0,3,4) @ Hhat.transpose(-1,-2).conj() + Rb\n",
+    "    Rx = Rxperm.permute(2,0,1,3,4) # shape of [I, N, F, M, M]\n",
+    "    ll = -(np.pi*Rx.det()).log() - (x[...,None,:].conj()@Rx.inverse()@x[...,None]).squeeze() \n",
+    "\n",
+    "    # \"Slot contrastive loss\"\n",
+    "    # inp = (zall[:,0::2]@zall[:,1::2].permute(0,2,1)).reshape(I*J, J) # shape of [N,J,J]\n",
+    "    # target = torch.cat([torch.arange(J) for i in range(I)]).cuda()\n",
+    "    # loss_slotCEL = nn.CrossEntropyLoss(reduction='none')(inp, target).sum()\n",
+    "\n",
+    "    # \"My own loss for H\"\n",
+    "    # HHt = Hhat@Hhat.permute(0,2,1).conj() \n",
+    "    # temp = x[...,None]@ x[:,:,:,None].conj()\n",
+    "    # rx = temp.mean(dim=(1,2))\n",
+    "    # term = (((rx- HHt/100).abs())**2).mean()\n",
+    "\n",
+    "    return -ll.sum(), beta*kl #+ loss_slotCEL\n",
+    "\n",
+    "#%%\n",
+    "I = 18000 # how many samples\n",
+    "M, N, F, J = 3, 64, 66, 3\n",
+    "eps = 5e-4\n",
+    "opts = {}\n",
+    "opts['batch_size'] = 128\n",
+    "opts['n_epochs'] = 701\n",
+    "opts['lr'] = 1e-3\n",
+    "\n",
+    "d = torch.load('../data/nem_ss/tr18kM3FT64_data3.pt')\n",
+    "xtr = (d/d.abs().amax(dim=(1,2,3), keepdim=True)) # [sample,M,N,F]\n",
+    "xtr = xtr.to(torch.cfloat)\n",
+    "data = Data.TensorDataset(xtr[:I])\n",
+    "tr = Data.DataLoader(data, batch_size=opts['batch_size'], shuffle=True, drop_last=True)\n",
+    "\n",
+    "xval, sval, hgt = torch.load('../data/nem_ss/val1kM3FT64_xsh_data3.pt')\n",
+    "sval= sval.permute(0,2,3,1)\n",
+    "xval = xval/xval.abs().amax(dim=(1,2,3), keepdim=True)\n",
+    "data = Data.TensorDataset(xval, sval, hgt)\n",
+    "dval = Data.DataLoader(data, batch_size=200, drop_last=True)\n",
+    "\n",
+    "#%%\n",
+    "loss_iter, loss_tr, loss1, loss2, loss_eval = [], [], [], [], []\n",
+    "model = NNet_s10(M,J,N).cuda()\n",
+    "# for w in model.parameters():\n",
+    "#     nn.init.normal_(w, mean=0., std=0.01)\n",
+    "\n",
+    "optimizer = torch.optim.RAdam(model.parameters(),\n",
+    "                lr= opts['lr'],\n",
+    "                betas=(0.9, 0.999), \n",
+    "                eps=1e-8,\n",
+    "                weight_decay=0)\n",
+    "\n",
+    "for epoch in range(opts['n_epochs']):\n",
+    "    model.train()\n",
+    "    for i, (x,) in enumerate(tr): \n",
+    "        x = x.cuda()\n",
+    "        optimizer.zero_grad()         \n",
+    "        Rs, Hhat, Rb, mu, logvar, zall= model(x)\n",
+    "        l1, l2 = loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall)\n",
+    "        loss = l1 + l2\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=100)\n",
+    "        optimizer.step()\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "        if i%30 == 0:\n",
+    "            loss_tr.append(loss.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss1.append(l1.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss2.append(l2.detach().cpu().item()/opts['batch_size'])\n",
+    "\n",
+    "    if epoch%5 == 0:\n",
+    "        print(epoch)\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr, '-or')\n",
+    "        plt.title(f'Loss fuction at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_LossFunAll')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss1, '-og')\n",
+    "        plt.title(f'Reconstruction loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss1')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss2, '-og')\n",
+    "        plt.title(f'KL loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss2')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr[-50:], '-or')\n",
+    "        plt.title(f'Last 50 of loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_last50')\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            av_hcorr, av_scorr, temp = [], [], []\n",
+    "            for i, (x, s, h) in enumerate(dval):\n",
+    "                xval_cuda = x.cuda()\n",
+    "                Rs, Hhat_val, Rb, mu, logvar, zall= model(xval_cuda)\n",
+    "                l1, l2 = loss_fun(xval_cuda, Rs, Hhat_val, Rb, mu, logvar, zall)\n",
+    "                temp.append((l1+l2).cpu().item()/x.shape[0])\n",
+    "                     \n",
+    "                Rxperm = Hhat_val@Rs.permute(1,2,0,3,4)@Hhat_val.transpose(-1,-2).conj() + Rb\n",
+    "                shatperm = Rs.permute(1,2,0,3,4)@Hhat_val.conj().transpose(-1,-2)\\\n",
+    "                        @Rxperm.inverse()@xval_cuda.permute(2,3,0,1)[...,None]\n",
+    "                shat = shatperm.permute(2,0,1,3,4).squeeze().cpu().abs()\n",
+    "                for ind in range(x.shape[0]):\n",
+    "                    hh = Hhat_val[ind]\n",
+    "                    av_hcorr.append(h_corr(hh.cpu(), h[ind]))\n",
+    "                    av_scorr.append(s_corr(s[ind].abs(), shat[ind]))\n",
+    "                \n",
+    "                if i == 0:\n",
+    "                    plt.figure()\n",
+    "                    for ind in range(3):\n",
+    "                        for ii in range(J):\n",
+    "                            plt.subplot(3,3,ii+1+ind*3)\n",
+    "                            plt.imshow(shat[ind,:,:,ii])\n",
+    "                            # plt.tight_layout(pad=1.1)\n",
+    "                            # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
+    "                    plt.savefig(fig_loc + f'Epoch{epoch}_estimated sources')\n",
+    "                    plt.show()\n",
+    "                    plt.close('all')\n",
+    "\n",
+    "            loss_eval.append(sum(temp)/len(temp))\n",
+    "            print('first 3 h_corr',av_hcorr[:3],' averaged:', sum(av_hcorr)/len(av_hcorr))\n",
+    "            print('first 3 s_corr',av_scorr[:3],' averaged:', sum(av_scorr)/len(av_hcorr))\n",
+    "\n",
+    "            plt.figure()\n",
+    "            plt.plot(loss_eval[-50:], '-xb')\n",
+    "            plt.title(f'last 50 validation loss at epoch{epoch}')\n",
+    "            plt.savefig(fig_loc + f'Epoch{epoch}_val') \n",
+    "            plt.close('all') \n",
+    "\n",
+    "        torch.save(model, mod_loc+f'model_epoch{epoch}.pt')\n",
+    "print('done')\n",
+    "print('End date time ', datetime.now())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
