--- a/files/vae_record.ipynb
+++ b/files/vae_record.ipynb
@@ -3388,7 +3388,7 @@
     "                    plt.figure()\n",
     "                    for ind in range(3):\n",
     "                        for ii in range(J):\n",
-    "                            plt.subplot(3,3,ii+1+ind*3)\n",
+    "                            plt.subplot(3,J,ii+1+ind*J)\n",
     "                            plt.imshow(shat[ind,:,:,ii])\n",
     "                            # plt.tight_layout(pad=1.1)\n",
     "                            # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
@@ -4776,7 +4776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -4790,12 +4790,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c728c5ad72b5fd3c6e083c4badca00ca04470578383c0e9d983163c40aa43e1f"
+    "hash": "fac40f379508c4cfae9fc091e223d50ced0be70195fe47ee2ea4ee37d189cc8d"
    }
   }
  },
