--- a/files/nem_record.ipynb
+++ b/files/nem_record.ipynb
@@ -166,11 +166,13 @@
     "            ll, Rs, Rx = log_likelihood(x, vhat, Hhat, Rb)\n",
     "            ll_traj.append(ll.item())\n",
     "            if torch.isnan(torch.tensor(ll_traj[-1])) : input('nan happened')\n",
-    "            if ii > 5 and abs((ll_traj[ii] - ll_traj[ii-3])/ll_traj[ii-3])<eps:\n",
-    "                print(f'EM early stop at iter {ii}, batch {i}, epoch {epoch}')\n",
-    "                break\n",
+    "            # if ii > 5 and abs((ll_traj[ii] - ll_traj[ii-3])/ll_traj[ii-3])<eps:\n",
+    "            #     print(f'EM early stop at iter {ii}, batch {i}, epoch {epoch}')\n",
+    "            #     break\n",
+    "\n",
+    "        if i%10 == 0:\n",
+    "            print(f'batch {i} is done. ', 'Current time--', datetime.now())\n",
     "    \n",
-    "        print(f'batch {i} is done')\n",
     "        if i == 0 :\n",
     "            plt.figure()\n",
     "            plt.plot(ll_traj, '-x')\n",
