--- a/files/vae_record.ipynb
+++ b/files/vae_record.ipynb
@@ -4620,7 +4620,7 @@
     "    os.mkdir(mod_loc + f'{rid}/')\n",
     "fig_loc = fig_loc + f'{rid}/'\n",
     "mod_loc = mod_loc + f'{rid}/'\n",
-    "# torch.autograd.set_detect_anomaly(True)\n",
+    "torch.autograd.set_detect_anomaly(True)\n",
     "\n",
     "#%% define models and functions\n",
     "from vae_modules import *\n",
@@ -4751,7 +4751,7 @@
     "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
     "    Rxperm = Hhat @ Rs.permute(1,2,0,3,4) @ Hhat.transpose(-1,-2).conj() + Rb\n",
     "    Rx = Rxperm.permute(2,0,1,3,4) # shape of [I, N, F, M, M]\n",
-    "    ll = -(np.pi*Rx.det()).log() - (x[...,None,:].conj()@Rx.inverse()@x[...,None]).squeeze() \n",
+    "    ll = -Rx.det().real.log() - (x[...,None,:].conj()@Rx.inverse()@x[...,None]).squeeze().real \n",
     "\n",
     "    # \"Slot contrastive loss\"\n",
     "    # inp = (zall[:,0::2]@zall[:,1::2].permute(0,2,1)).reshape(I*J, J) # shape of [N,J,J]\n",
@@ -4771,7 +4771,7 @@
     "M, N, F, J = 6, 64, 66, 6\n",
     "eps = 5e-4\n",
     "opts = {}\n",
-    "opts['batch_size'] = 128\n",
+    "opts['batch_size'] = 16\n",
     "opts['n_epochs'] = 901\n",
     "opts['lr'] = 1e-3\n",
     "\n",
@@ -4847,11 +4847,13 @@
     "                Rs, Hhat_val, Rb, mu, logvar, zall= model(xval_cuda)\n",
     "                l1, l2 = loss_fun(xval_cuda, Rs, Hhat_val, Rb, mu, logvar, zall)\n",
     "                temp.append((l1+l2).cpu().item()/x.shape[0])\n",
-    "                     \n",
+    "                 \n",
     "                Rxperm = Hhat_val@Rs.permute(1,2,0,3,4)@Hhat_val.transpose(-1,-2).conj() + Rb\n",
+    "\n",
     "                shatperm = Rs.permute(1,2,0,3,4)@Hhat_val.conj().transpose(-1,-2)\\\n",
     "                        @Rxperm.inverse()@xval_cuda.permute(2,3,0,1)[...,None]\n",
     "                shat = shatperm.permute(2,0,1,3,4).squeeze().cpu().abs()\n",
+    "\n",
     "                for ind in range(x.shape[0]):\n",
     "                    hh = Hhat_val[ind]\n",
     "                    av_hcorr.append(h_corr(hh.cpu(), h[ind]))\n",
