fixed a bug in s76ca

--- a/files/vae_record.ipynb
+++ b/files/vae_record.ipynb
@@ -4259,7 +4259,7 @@
     "                Rxperm = Hhat_val@Rs.permute(1,2,0,3,4)@Hhat_val.transpose(-1,-2).conj() + Rb\n",
     "                shatperm = Rs.permute(1,2,0,3,4)@Hhat_val.conj().transpose(-1,-2)\\\n",
     "                        @Rxperm.inverse()@xval_cuda.permute(2,3,0,1)[...,None]\n",
-    "                shat = shatperm.permute(2,0,1,3,4).squeeze().abs()\n",
+    "                shat = shatperm.permute(2,0,1,3,4).squeeze().cpu().abs()\n",
     "                for ind in range(x.shape[0]):\n",
     "                    hh = Hhat_val[ind]\n",
     "                    av_hcorr.append(h_corr_cuda(hh, h[ind].cuda()).cpu())\n",
