added n15c removed n19c in the nem record

--- a/files/nem_record.ipynb
+++ b/files/nem_record.ipynb
@@ -1844,7 +1844,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%@title 'n19c'\n",
+    "#%%@title 'n15c'\n",
     "from utils import *\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "plt.rcParams['figure.dpi'] = 100\n",
@@ -1854,7 +1854,7 @@
     "torch.manual_seed(1)\n",
     "\n",
     "#%%\n",
-    "rid = 'n19c' # running id\n",
+    "rid = 'n15c' # running id\n",
     "fig_loc = '../data/nem_ss/figures/'\n",
     "mod_loc = '../data/nem_ss/models/'\n",
     "if not(os.path.isdir(fig_loc + f'/{rid}/')): \n",
@@ -1899,7 +1899,7 @@
     "        out = x/x.detach().amax(keepdim=True, dim=(-1,-2))\n",
     "        return out\n",
     "\n",
-    "I = 1000 # how many samples\n",
+    "I = 3000 # how many samples\n",
     "M, N, F, J = 6, 64, 66, 6\n",
     "NF = N*F\n",
     "eps, delta, glr = 5e-4, 1, 0.01 # delta is scale for Rb, glr is gamma learning rate\n",
@@ -1919,6 +1919,7 @@
     "for w in model.parameters():\n",
     "    nn.init.normal_(w, mean=0., std=0.01)\n",
     "model = torch.load('../data/nem_ss/models/n8/model_ridn8_30.pt')\n",
+    "\n",
     "optimizer = torch.optim.RAdam(model.parameters(),\n",
     "                lr= opts['lr'],\n",
     "                betas=(0.9, 0.999), \n",
@@ -2053,7 +2054,7 @@
     "    plt.close('all')  # to avoid warnings\n",
     "    torch.save(loss_tr, mod_loc +f'loss_rid{rid}.pt')\n",
     "    torch.save(model, mod_loc +f'model_rid{rid}_{epoch}.pt')\n",
-    "    torch.save(Hhat, mod_loc +f'Hhat_rid{rid}_{epoch}.pt')    \n",
+    "    torch.save(Htr, mod_loc +f'Htr_rid{rid}_{epoch}.pt')    \n",
     "\n",
     "    # if epoch >10 :\n",
     "    #     s1, s2 = sum(loss_tr[-n*2:-n])/n, sum(loss_tr[-n:])/n\n",
