--- a/test_nem.ipynb
+++ b/test_nem.ipynb
@@ -272,7 +272,7 @@
     "torch.backends.cudnn.benchmark = False  #False cuda use the fixed alg. for conv, may slower\n",
     "\n",
     "#%%\n",
-    "d, s, h = torch.load('../data/nem_ss/test1kM6FT64_xsh_data3.pt')\n",
+    "d, s, h = torch.load('../data/nem_ss/test1kM6FT64_xsh_data4.pt')\n",
     "N, F = s.shape[-1], s.shape[-2] # h is M*J matrix, here 6*6\n",
     "ratio = d.abs().amax(dim=(1,2,3))\n",
     "x_all = (d/ratio[:,None,None,None]).permute(0,2,3,1)\n",
@@ -471,9 +471,9 @@
     "\n",
     "#%%\n",
     "print('End date time ', datetime.now())\n",
-    "rid = 'n8'\n",
+    "rid = 'n23c4'\n",
     "EMs, EMh = [], []\n",
-    "model = f'../data/nem_ss/models/{rid}/model_rid{rid}_54.pt'\n",
+    "model = f'../data/nem_ss/models/{rid}/model_rid{rid}_2.pt'\n",
     "for snr in ['inf', 20, 10, 5, 0]:\n",
     "    ems, emh = [], []\n",
     "    for ind in range(0, 1000, 1):\n",
