--- a/r1_test_vae.ipynb
+++ b/r1_test_vae.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "\"\"\"6class best is s76ca epoch 660\"\"\"\n",
+    "\"\"\"6class best is s121 epoch 575\"\"\"\n",
     "#%%\n",
     "from utils import *\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
@@ -452,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
