--- a/files/nem_record.ipynb
+++ b/files/nem_record.ipynb
@@ -3003,7 +3003,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.13"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
